; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_ks8695_wdt.c_ks8695_wdt_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_ks8695_wdt.c_ks8695_wdt_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ks8695_lock = common dso_local global i32 0, align 4
@KS8695_TMR_VA = common dso_local global i64 0, align 8
@KS8695_TMCON = common dso_local global i64 0, align 8
@TMCON_T0EN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ks8695_wdt_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ks8695_wdt_stop() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 @spin_lock(i32* @ks8695_lock)
  %3 = load i64, i64* @KS8695_TMR_VA, align 8
  %4 = load i64, i64* @KS8695_TMCON, align 8
  %5 = add nsw i64 %3, %4
  %6 = call i64 @__raw_readl(i64 %5)
  store i64 %6, i64* %1, align 8
  %7 = load i64, i64* %1, align 8
  %8 = load i64, i64* @TMCON_T0EN, align 8
  %9 = xor i64 %8, -1
  %10 = and i64 %7, %9
  %11 = load i64, i64* @KS8695_TMR_VA, align 8
  %12 = load i64, i64* @KS8695_TMCON, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @__raw_writel(i64 %10, i64 %13)
  %15 = call i32 @spin_unlock(i32* @ks8695_lock)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i64 @__raw_readl(i64) #1

declare dso_local i32 @__raw_writel(i64, i64) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
